Added metrics writer, timezone awareness and made the api a bit more verbose

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,4 +4,14 @@ services:
      image: rabbitmq:3-management
      ports:
        - "8080:15672"
-       - "5672:5672"       
+       - "5672:5672"
+  influxdb:
+    image: influxdb:latest
+    ports:
+        - "8083:8083"
+        - "8086:8086"
+        - "8090:8090"
+  grafana:
+    image: grafana/grafana:latest
+    ports:
+      - "3000:3000"
