Migrating event_writer and validator to kombu instead of pika to make it less tightly coupled with rabbitmq

--- a/event_writer/event_writer/logging.yaml
+++ b/event_writer/event_writer/logging.yaml
@@ -11,7 +11,7 @@ handlers:
         formatter: simple
         stream: ext://sys.stdout
 loggers:
-    pika:
+    amqp:
         level: WARN
         propagate: true
 root:
