Fixed the repo endpoint so it uses querystring instead of url param

--- a/event_api/event_api/blueprints/swagger_docs/repository.yaml
+++ b/event_api/event_api/blueprints/swagger_docs/repository.yaml
@@ -3,8 +3,8 @@ Get a repository
 tags:
   - repositories
 parameters:
-  - in: path
-    name: repo_name
+  - in: query
+    name: id
     type: string
     required: true
     description: The short-name of the repository to get
