Added a gitlab adapter

--- a/local-docker-compose.yml
+++ b/local-docker-compose.yml
@@ -24,3 +24,10 @@ services:
     image: postgres
     ports:
       - "5433:5432"
+
+  gitlab:
+    container_name: gitlab
+    image: gitlab/gitlab-ce:latest
+    ports:
+      - "80:80"
+      - "2222:22"
