--- a/local-docker-compose.yml
+++ b/local-docker-compose.yml
@@ -25,9 +25,9 @@ services:
     ports:
       - "5433:5432"
 
-  gitlab:
-    container_name: gitlab
-    image: gitlab/gitlab-ce:latest
-    ports:
-      - "80:80"
-      - "2222:22"
+  # gitlab:
+  #   container_name: gitlab
+  #   image: gitlab/gitlab-ce:latest
+  #   ports:
+  #     - "80:80"
+  #     - "2222:22"
