Saga playing around

--- a/ngcd_ui/package.json
+++ b/ngcd_ui/package.json
@@ -230,7 +230,8 @@
     "locale": "^0.1.0",
     "lodash": "4.17.4",
     "material-design-icons": "^3.0.1",
-    "material-ui": "^0.20.0",
+    "material-ui": "^1.0.0-beta.35",
+    "material-ui-icons": "^1.0.0-beta.35",
     "minimist": "1.2.0",
     "moment": "^2.20.1",
     "prop-types": "15.5.10",
