--- a/ngcd_ui/package.json
+++ b/ngcd_ui/package.json
@@ -274,6 +274,7 @@
     "eslint-config-airbnb-base": "11.2.0",
     "eslint-import-resolver-webpack": "0.8.3",
     "eslint-plugin-import": "2.7.0",
+    "eslint-plugin-import-order-autofix": "^0.8.3",
     "eslint-plugin-jsx-a11y": "5.0.3",
     "eslint-plugin-react": "7.0.1",
     "eslint-plugin-redux-saga": "0.3.0",
