--- a/ngcd_ui/package.json
+++ b/ngcd_ui/package.json
@@ -214,6 +214,7 @@
     "chalk": "^1.1.3",
     "compression": "1.6.2",
     "cross-env": "5.0.0",
+    "dotenv-webpack": "^1.5.5",
     "express": "4.15.3",
     "fontfaceobserver": "2.0.9",
     "history": "4.6.3",
